--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	font-family: "Segoe UI";
+	font: 10px sans-serif;
 }
 
 .left{
@@ -16,9 +16,59 @@ body{
 	clear:both;
 }
 
-#wrapper{
-	width: 500px;
-	margin: 10px auto;
-	padding:10px;
-	border:1px solid grey;
-}
+	#wrapper{
+		width: 500px;
+		margin: 10px auto;
+		padding:10px;
+		border:1px solid grey;
+	}
+	
+/* D3 */
+
+	.axis path,
+	.axis line {
+	  fill: none;
+	  stroke: #000;
+	  shape-rendering: crispEdges;
+	}
+
+	.bar {
+	  fill: orange;
+	}
+
+	.bar:hover {
+	  fill: orangered ;
+	}
+
+	.x.axis path {
+	  display: none;
+	}
+
+	.d3-tip {
+	  line-height: 1;
+	  font-weight: bold;
+	  padding: 12px;
+	  background: rgba(0, 0, 0, 0.8);
+	  color: #fff;
+	  border-radius: 2px;
+	}
+
+	/* Creates a small triangle extender for the tooltip */
+	.d3-tip:after {
+	  box-sizing: border-box;
+	  display: inline;
+	  font-size: 10px;
+	  width: 100%;
+	  line-height: 1;
+	  color: rgba(0, 0, 0, 0.8);
+	  content: "\25BC";
+	  position: absolute;
+	  text-align: center;
+	}
+
+	/* Style northward tooltips differently */
+	.d3-tip.n:after {
+	  margin: -1px 0 0 0;
+	  top: 100%;
+	  left: 0;
+	}
